--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,10 @@
 # Binaries
 bin/
+data/
+secrets/
 
-# Test binary
-*.test
-
-# Database files
-*.db
-*.db-shm
-*.db-wal
 
 # CSV exports
 *.csv
-
-# Temporary files
-tmp/
-temp/
 
 .claude
